...
    private lazy var likeButton: UIButton = {
        let button = UIButton(type: .custom)
        button.setImage(UIImage.likeActive, for: .normal)
        button.setTitle(nil, for: .normal)
        button.imageView?.contentMode = .scaleAspectFit
        button.isUserInteractionEnabled = true
        button.accessibilityIdentifier = "like button off"
        button.translatesAutoresizingMaskIntoConstraints = false
        button.addTarget(self, action: #selector(likeButtonClicked), for: .touchUpInside)
        return button
    }()
    
    private lazy var shimmerView = ShimmerView()
...
    
    // MARK: -
    func setIsLiked(_ isLiked: Bool) {
        let image = isLiked ? UIImage.likeActive : UIImage.likeNoActive
        likeButton.setImage(image, for: .normal)
        likeButton.isSelected = isLiked
        likeButton.accessibilityIdentifier = isLiked ? "like button on" : "like button off"
    }
    
    func startShimmer() {
        shimmerView.isHidden = false
        shimmerView.startAnimating()
    }
...
