...
        let button = UIButton(type: .system)
        button.setTitle(AuthConstants.signInButtonTitle, for: .normal)
        button.backgroundColor = UIColor.ypWhite
        button.layer.cornerRadius = AuthConstants.buttonCornerRadius
        button.setTitleColor(UIColor.ypBlack, for: .normal)
        button.titleLabel?.font = UIFont.systemFont(ofSize: AuthConstants.buttonFontSize, weight: .bold)
        button.accessibilityIdentifier = "Authenticate"
        button.translatesAutoresizingMaskIntoConstraints = false
        return button
    }()
    
    // MARK: - Delegate
    weak var delegate: AuthViewControllerDelegate?
...
